--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
-    "next": "^14.0.0",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "react-slick": "^0.29.0",
     "sharp": "^0.30.7",
+    "slick-carousel": "^1.8.1",
     "webpack": "^5"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "cypress": "^9.5.2",
