Faceted search upd

--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@medusajs/modules-sdk": "^1.11.0",
     "@medusajs/pricing": "^0.0.3",
     "@medusajs/product": "^0.2.0",
-    "@meilisearch/instant-meilisearch": "^0.7.1",
+    "@meilisearch/instant-meilisearch": "^0.13.6",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "@tanstack/react-query": "^4.22.4",
     "clsx": "^1.1.1",
+    "instantsearch.js": "^4.60.0",
     "lodash": "^4.17.21",
     "medusa-react": "^9.0.0",
     "next": "^14.0.3",
@@ -41,6 +42,7 @@
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
+    "react-instantsearch-dom": "^6.40.4",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "react-slick": "^0.29.0",
